--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('reservations.all_reservations') }}">所有预约</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin.user_management') }}">用户管理</a>
+                    </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('records.my_records') }}">我的记录</a>
